# cos30019_ass1_optionB

./: .clang-format  .gitmodules  CMakeLists.txt  REPORT.md  RobotNav-test-sol.txt  RobotNav-test2.txt  RobotNav-test3.txt  RobotNav-test4.txt  \  compile_flags.txt
.github/workflows/: linux-clang.yml  linux.yml  windows-clang.yml  windows.yml
include/: agent.hh  days.hh  e_action.hh  e_block.hh  e_directions.hh  e_methods.hh  enum_str.hh  enums.hh  errors.hh  grid.hh  gui.hh  isearch.hh  search.hh  utils.hh
include/search/: astar.hh  bfs.hh  dfs.hh  dijkstra.hh  gbfs.hh  idastar.hh
src/: CMakeLists.txt  agent.cc  errors.cc  gen_test.cc  grid.cc  gui.cc  main.cc  main.cpp  search.cc  utils.cc
src/search/: astar.cc  bfs.cc  dfs.cc  dijkstra.cc  gbfs.cc  hill.cc  idastar.cc
test/: CMakeLists.txt  search_auto_gen_200_200_test.cc  search_auto_gen_20_20_test.cc  search_auto_gen_5000_5000_test.cc  search_auto_gen_50_50_test.cc  search_auto_gen_5_11_test.cc  search_fail_test.cc  search_test.cc
